--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -53,7 +53,7 @@ jobs:
           context: backend
           file: backend/Dockerfile
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-backend:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/bestagent-elera-backend:latest
           push: true
 
       - name: Build and push frontend
@@ -62,7 +62,7 @@ jobs:
           context: frontend
           file: frontend/Dockerfile
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-frontend:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/bestagent-elera-frontend:latest
           push: true
 
   deploy:
@@ -101,8 +101,8 @@ jobs:
             
             cd $COMPOSE_DIR || exit 1
 
-            echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" > $ENV_FILE
-            echo "PROJECT_NAME=bestagent-elera" >> $ENV_FILE
+            echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" > .env
+            echo "PROJECT_NAME=bestagent-elera" >> .env
             
             echo "=== Building containers ==="
             docker compose -f $COMPOSE_FILE build
