--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,25 +3,27 @@ version: '3.8'
 services:
   frontend:
     image: ${DOCKER_HUB_USERNAME}/bestagent-elera-frontend:latest
-    restart: always
-    environment:
-      - NODE_ENV=production
+    ports:
+      - "3000:3000"
     volumes:
-      - ./frontend/build:/app/build
+      - frontend_build:/app/result_build/
+    environment:
+      NODE_ENV: production
+    restart: always
 
   backend:
     image: ${DOCKER_HUB_USERNAME}/bestagent-elera-backend:latest
     restart: always
-    command: gunicorn --bind 0.0.0.0:8000 core.wsgi
+    ports:
+      - "8000:8000"
+    volumes:
+      - static_value:/app/backend_static/
     environment:
-      - DATABASE_URL=postgres://postgre:Restart.1996@db:5432/bestagent-elera
-      - SECRET_KEY=your-secret-key
-    depends_on:
-      - db
+      DATABASE_URL: postgres://postgre:Restart.1996@db:5432/bestagent-elera
+      SECRET_KEY: ${DJANGO_SECRET_KEY}
 
   db:
     image: postgres:13
-    restart: always
     environment:
       POSTGRES_USER: postgre
       POSTGRES_PASSWORD: Restart.1996
@@ -31,16 +33,18 @@ services:
 
   nginx:
     image: nginx:1.21.3-alpine
-    restart: always
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/build:/usr/share/nginx/html
-      - ./backend/static:/var/html/static
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - frontend_build:/usr/share/nginx/html/
+      - static_value:/var/html/backend_static/
     depends_on:
-      - frontend
       - backend
+      - frontend
 
 volumes:
   postgres_data:
+  frontend_build:
+  static_value:
