--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,28 +1,15 @@
-# FROM node:18.14.2-alpine as build
-
-# WORKDIR /app
-
-# COPY package*.json ./
-
-# RUN npm install
-
-# COPY . .
-
-# RUN npm run build
-# CMD cp -r build result_build
-# ENV NODE_ENV=production
-
-# CMD ["npm", "start"]
 FROM node:18.14.2-alpine as build
 
 WORKDIR /app
+
 COPY package*.json ./
+
 RUN npm install
+
 COPY . .
+
 RUN npm run build
+CMD cp -r build result_build
+ENV NODE_ENV=production
 
-FROM nginx:alpine
-
-COPY --from=build /app/build /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
+CMD ["npm", "start"]
