--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,38 +1,82 @@
+# version: '3.8'
+
+# services:
+#   frontend:
+#     build:
+#       context: ../frontend
+#       dockerfile: Dockerfile.prod
+#     networks:
+#       - app-network
+#     restart: always
+
+#   backend:
+#     build:
+#       context: ../backend
+#     restart: always
+#     volumes:
+#       - static_value:/app/backend_static/
+#     environment:
+#       DATABASE_URL: postgres://postgre:Restart.1996@db:5432/bestagent-elera
+#       SECRET_KEY: ${DJANGO_SECRET_KEY}
+#     depends_on:
+#       - db
+#     networks:
+#       - app-network
+
+#   db:
+#     image: postgres:13
+#     environment:
+#       POSTGRES_USER: postgre
+#       POSTGRES_PASSWORD: Restart.1996
+#       POSTGRES_DB: bestagent-elera
+#     volumes:
+#       - postgres_data:/var/lib/postgresql/data
+#     networks:
+#       - app-network
+
+#   nginx:
+#     image: nginx:1.21.3-alpine
+#     ports:
+#       - "80:80"
+#       - "443:443"
+#     volumes:
+#       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+#       - static_value:/var/html/backend_static
+#       - /etc/letsencrypt:/etc/letsencrypt:ro
+#     depends_on:
+#       - backend
+#     networks:
+#       - app-network
+
+# volumes:
+#   postgres_data:
+#   static_value:
+
+# networks:
+#   app-network:
+#     driver: bridge
 version: '3.8'
 
 services:
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile.prod
-    networks:
-      - app-network
+    image: bestagent/bestagent-elera-frontend:latest
+    ports:
+      - "3000:3000"
+    volumes:
+      - frontend_build:/app/result_build/
+    environment:
+      NODE_ENV: production
     restart: always
 
   backend:
-    build:
-      context: ../backend
+    image: bestagent/bestagent-elera-backend:latest
     restart: always
+    ports:
+      - "8000:8000"
     volumes:
-      - static_value:/app/backend_static/
+      - static_value:/app/backend_static/   # 🛑 ИСПРАВЬТЕ ЭТО! (было /app/)
     environment:
-      DATABASE_URL: postgres://postgre:Restart.1996@db:5432/bestagent-elera
-      SECRET_KEY: ${DJANGO_SECRET_KEY}
-    depends_on:
-      - db
-    networks:
-      - app-network
-
-  db:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: postgre
-      POSTGRES_PASSWORD: Restart.1996
-      POSTGRES_DB: bestagent-elera
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - app-network
+      - MEDIA_ROOT=/app/backend_media/     # Явное указание пути для Django
 
   nginx:
     image: nginx:1.21.3-alpine
@@ -40,18 +84,16 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/var/html/backend_static
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt/live/bestagent-elera.ru:/etc/nginx/ssl:ro
+      - /etc/letsencrypt/live/bestagent-elera.ru:/etc/nginx/ssl_archive:ro
+      - frontend_build:/usr/share/nginx/html/
+      - static_value:/var/html/backend_static/ # 🛑 ИСПРАВЬТЕ ЭТО! (было /backend_media/backend_media)
+    restart: always
     depends_on:
       - backend
-    networks:
-      - app-network
+      - frontend
 
 volumes:
-  postgres_data:
+  frontend_build:
   static_value:
-
-networks:
-  app-network:
-    driver: bridge
