--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt/live/ergeshevarealty.ru:/etc/nginx/ssl:ro
+      - ./nginx/certs:/etc/nginx/ssl:ro
       - frontend_build:/usr/share/nginx/html/
       - static_value:/var/html/backend_static/
       - ./nginx/acme-challenge:/var/www/html/.well-known/acme-challenge
