--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,5 +1,5 @@
 upstream backend {
-    server backend:8000;
+    server backend;
 }
 
 server {
@@ -31,9 +31,10 @@ server {
 
     # Frontend
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     # Backend API
@@ -46,13 +47,14 @@ server {
     }
 
     # Статика Django
-    location /static/ {
-        alias /var/html/backend_static/;
-        expires 1y;
-        access_log off;
-        add_header Cache-Control "public";
+    location /backend_static/ {
+        root /var/html/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
     }
-
+    
     # Let's Encrypt ACME challenge
     location ^~ /.well-known/acme-challenge/ {
         root /var/www/html;
