--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -16,5 +16,5 @@ jobs:
           password: ${{ secrets.BEGET_PASSWORD }}
           script: |
             cd ~/PROJECT_ELERA/
-            git pull origin main
+            git pull
             pm2 restart all
