--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
       "web-vitals": "^4.2.4"
     },
     "scripts": {
-      "start": "set HOST=ergeshevarealty.ru && react-scripts start",
+      "dev": "set HOST=0.0.0.0 && react-scripts start",
+      "start": "set HOST=0.0.0.0 && set PORT=3000 && react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
