--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 DANGEROUSLY_DISABLE_HOST_CHECK=true
-HOST=ergeshevarealty.ru
+HOST=0.0.0.0
 PORT=3000
 BROWSER=none
 DANGEROUSLY_DISABLE_HOST_CHECK=true
