--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://45.153.191.8:8000",
     "dependencies": {
       "canvas-confetti": "^1.9.3",
       "cra-template": "1.2.0",
@@ -15,8 +16,8 @@
       "web-vitals": "^4.2.4"
     },
     "scripts": {
-      "dev": "set HOST=0.0.0.0 && react-scripts start",
-      "start": "set HOST=0.0.0.0 && set PORT=3000 && react-scripts start",
+      "start": "PORT=3000 HOST=0.0.0.0 react-scripts start",
+      "dev": "PORT=3000 HOST=0.0.0.0 react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
