--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://45.153.191.8:8000",
     "dependencies": {
       "canvas-confetti": "^1.9.3",
       "cra-template": "1.2.0",
@@ -16,8 +15,8 @@
       "web-vitals": "^4.2.4"
     },
     "scripts": {
-      "start": "PORT=3000 HOST=0.0.0.0 react-scripts start",
-      "dev": "PORT=3000 HOST=0.0.0.0 react-scripts start",
+      "start": "react-scripts start",
+      "dev": "react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
