--- a/frontend/.env
+++ b/frontend/.env
@@ -3,6 +3,6 @@ HOST=0.0.0.0
 PORT=3000
 BROWSER=none
 DANGEROUSLY_DISABLE_HOST_CHECK=true
-PUBLIC_URL=http://45.153.191.8:3000
+PUBLIC_URL=https://45.153.191.8:3000
 WDS_SOCKET_PORT=0
 HTTPS=true
