--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -32,6 +32,44 @@ server {
         add_header Access-Control-Allow-Origin *;
     }
 
+    location /static/js/ {
+        alias /root/PROJECT_ELERA/frontend/build/static/js/;
+        expires 365d;
+        access_log off;
+        add_header Cache-Control "public";
+        try_files $uri =404;
+    }
+
+    location /static/css/ {
+        alias /root/PROJECT_ELERA/frontend/build/static/css/;
+        expires 365d;
+        access_log off;
+        add_header Cache-Control "public";
+        try_files $uri =404;
+    }
+
+    location /static/media/ {
+        alias /root/PROJECT_ELERA/frontend/build/static/media/;
+        expires 365d;
+        access_log off;
+        add_header Cache-Control "public";
+        try_files $uri =404;
+    }
+
+    # Favicon and manifest
+    location = /favicon.ico {
+        alias /root/PROJECT_ELERA/frontend/build/favicon.ico;
+        expires max;
+        access_log off;
+    }
+
+    location = /manifest.json {
+        alias /root/PROJECT_ELERA/frontend/build/manifest.json;
+        expires max;
+        access_log off;
+        add_header Content-Type application/json;
+    }
+
     # Django admin and API
     location /api/ {
         proxy_pass http://127.0.0.1:8000;
