--- a/frontend/.env
+++ b/frontend/.env
@@ -1,9 +1,6 @@
-DANGEROUSLY_DISABLE_HOST_CHECK=true
 HOST=0.0.0.0
 PORT=3000
 BROWSER=none
-PUBLIC_URL=/build
-WDS_SOCKET_PORT=0
 HTTPS=true
-REACT_APP_API = https://ergeshevarealty.ru/api/
-REACT_APP_HOST = https://ergeshevarealty.ru/
+REACT_APP_API=https://ergeshevarealty.ru/api
+REACT_APP_HOST=https://ergeshevarealty.ru
