--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -16,59 +16,21 @@ server {
     # SSL settings
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
-    ssl_ecdh_curve secp384r1;
-    ssl_session_timeout 10m;
-    ssl_session_cache shared:SSL:10m;
+
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256';
+
+    ssl_ecdh_curve X25519:secp384r1;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:MozSSL:10m;
     ssl_session_tickets off;
-    ssl_stapling on;
-    ssl_stapling_verify on;
 
-    # Static files
-    location /static/ {
-        alias /root/PROJECT_ELERA/backend/staticfiles/;
-        expires 365d;
-        access_log off;
-        add_header Access-Control-Allow-Origin *;
-    }
+    ssl_stapling off;
+    ssl_stapling_verify off;
+    resolver 8.8.8.8 1.1.1.1 valid=300s;
+    resolver_timeout 5s;
 
-    location /static/js/ {
-        alias /root/PROJECT_ELERA/frontend/build/static/js/;
-        expires 365d;
-        access_log off;
-        add_header Cache-Control "public";
-        try_files $uri =404;
-    }
-
-    location /static/css/ {
-        alias /root/PROJECT_ELERA/frontend/build/static/css/;
-        expires 365d;
-        access_log off;
-        add_header Cache-Control "public";
-        try_files $uri =404;
-    }
-
-    location /static/media/ {
-        alias /root/PROJECT_ELERA/frontend/build/static/media/;
-        expires 365d;
-        access_log off;
-        add_header Cache-Control "public";
-        try_files $uri =404;
-    }
-
-    # Favicon and manifest
-    location = /favicon.ico {
-        alias /root/PROJECT_ELERA/frontend/build/favicon.ico;
-        expires max;
-        access_log off;
-    }
-
-    location = /manifest.json {
-        alias /root/PROJECT_ELERA/frontend/build/manifest.json;
-        expires max;
-        access_log off;
-        add_header Content-Type application/json;
-    }
+    root /var/www/PROJECT_ELERA/frontend/build;
+    index index.html;
 
     # Django admin and API
     location /api/ {
@@ -83,9 +45,17 @@ server {
         proxy_read_timeout 300s;
     }
 
+    location /static/ {
+        alias /var/www/PROJECT_ELERA/frontend/build/static/;
+        expires 1y;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
     # Frontend React app
     location / {
-        proxy_pass http://127.0.0.1:3000;
+        root /var/www/PROJECT_ELERA/frontend/build;
+        try_files $uri $uri/ /index.html;
         proxy_set_header Host $host;
         proxy_http_version 1.1;
 
@@ -93,7 +63,7 @@ server {
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-        
+
         # Критически важные заголовки для React
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -101,15 +71,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
-        
+
         # Для WebSocket
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        
+
         # Отключение буферизации для HMR
         proxy_buffering off;
         proxy_redirect off;
-        
+
         # Таймауты
         proxy_read_timeout 300s;
         proxy_connect_timeout 300s;
@@ -127,4 +97,5 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+
 }
